--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
+@charset "UTF-8"; 
+    
+*{
+    height: ;
+}
+
 body {
     font-family: sans-serif; 
     background-image: linear-gradient(45deg,cyan,yellow);
+    background-attachment:fixed;
 }
 header {
     padding: 8px 24px;
@@ -21,14 +28,7 @@ header p {
     text-align: center;
     
 }
-.eu a{
-    color: rgb(105, 105, 105);
-    text-decoration: none;    
-    transition: color 0.3s;
-    font-weight: 900;
+.eu a{    
     padding: 20px 18px 0 ;
    
-}
-.eu a:hover{
-    color:red
 }
