--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@
 
 body {
     font-family: sans-serif; 
-    background-image: linear-gradient(45deg,cyan,yellow);
+    background-image: linear-gradient(45deg,#13678A,#45C4B0);
     background-attachment:fixed;
 }
 header {
     padding: 8px 24px;
-    background-image: linear-gradient(45deg,cyan,yellow);
+    background-image: linear-gradient(45deg,#13678A,#45C4B0);
     align-items:center;
     display: flex;
     flex-wrap: wrap;
