--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ main h2 {
     font-family:'Courier New', Courier, monospace ;
     padding-bottom: 25px; 
     font-weight: lighter;
+    color: #13668a;
 }
 main b {
     color: #2cca5c;
