--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ main p {
     font-weight:lighter ;
     text-align: center;
     text-indent: 30px;
-    line-height: 2em;
+    line-height: 1.5em;
     font-size: 1em;
 }
 
@@ -103,15 +103,24 @@ footer a:hover {
 h2{
     font-size: 18px;
     color:rgba(0, 0, 0, 0.315);
+    margin-top: 25px;
     
 }
 #mensagem {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
     line-height: 1.8;
-    animation: changeMessage 5s normal;
-    color:#2cca5c;
-    margin: 30px;
+    animation: changeMessage 2s infinite;
+    background-color:#45c4b159;   
+    padding: 20px; 
+    border-radius: 10px;
+    font-weight: bold;
+    min-width: 320px;
+    max-width: 400px; 
+    margin: auto;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
   }
   
   @keyframes changeMessage {
