--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ main p {
     font-weight:lighter ;
     text-align: center;
     text-indent: 30px;
-    line-height: 1.5em;
+    line-height: 2em;
     font-size: 1em;
 }
 
@@ -75,7 +75,7 @@ main h3 {
     color: #13668a;
 }
 main b {
-    color:rgba(50, 205, 58, 0.616);
+    color:black;
     font-weight: bold;
     
 }
